[project]
name = "helmets"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "ultralytics",
    "torch",
    "torchvision",
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }